package view;

public interface IIcon {
    Object getIcon(); // Returns an icon or null if dead
}